Add user register and loign handler.
