# api/routes/user.go
@@ -11,4 +11,7 @@ import (
 func User(r *gin.RouterGroup, config *config.Config) {
 	h := handlers.NewUserHandler(config)
 	r.POST("/send-otp", middlewares.OptLimiter(config), h.SendOtp)
+	r.POST("/register-by-username", h.RegisterByUsername)
+	r.POST("/register-login-by-phone", h.RegisterLoginByMobile)
+	r.POST("/login-by-username", h.LoginByUsername)
 }
